Atualiza os Services para utilizar OperationResult genérico